# capstone

./: setup.py
install/: local_setup.sh  setup.sh
install/radar_sdk_ros/lib/radar_sdk_ros/: campub  camsub  radar_pub  radar_pub_limit  radar_spectrogram  radar_sub
install/radar_sdk_ros/share/radar_sdk_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rdk/share/rdk/: package.bash  package.zsh
log/: latest_build
radar_sdk_ros/: real_time_predict.py  real_time_radar_sub copy 2.py  real_time_radar_sub save.py  real_time_radar_sub.py
radar_sdk_ros/cam/: cam.py  campub copy.py  camsub_copy.py
radar_sdk_ros/radar/: cam_and_radar.py  normalized.py
src/: cut_data.py
src/radar_sdk/examples/: CMakeLists.txt
src/radar_sdk/examples/c/common/: common.c  common.h  json.h
src/radar_sdk/examples/py/BGT24ATR22/: raw_data.py  raw_data_plotter.py
src/radar_sdk/examples/py/FMCW/: cam.py  cam_and_radar.py  cam_data.py  normalized_antenna.py  raw_data.py  spectrogram.py  spectrogram_code copy 2.py  spectrogram_code copy.py  spectrogram_code.py
src/radar_sdk/sdk/: CMakeLists.txt
src/radar_sdk/sdk/c/ifxAdvancedMotionSensing/: AdvancedMotionSensing.h
src/radar_sdk/sdk/c/ifxAlgo/: FFT.c  MTI.c
src/radar_sdk/sdk/c/ifxAvian/: DeviceControl.h
src/radar_sdk/sdk/matlab/: CMakeLists.txt
src/radar_sdk/sdk/py/: CMakeLists.txt  generate_exceptions.py
src/radar_sdk_ros/: package.xml  setup.cfg  setup.py
src/radar_sdk_ros/radar_sdk_ros/: cam_data.py  campub.py  camsub.py  radar_pub.py  real_time_radar_sub.py
(+45 files in other folders)
